force-app/main/default/objects/ArdiraSurvey__Translation__c/ArdiraSurvey__Translation__c.object-meta.xml
<CustomObject>
    <description>This object stores the language translations for content used in a survey.</description>
    <label>Ardira Translation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Translation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>