force-app/main/default/objects/ArdiraSurvey__Translation__c/fields/ArdiraSurvey__Language__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Language__c</fullName>
    <description>Language of the translation.2</description>
    <inlineHelpText>Language of the translation.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArdiraSurvey__Survey_Languages</valueSetName>
    </valueSet>
</CustomField>