force-app/main/default/objects/ArdiraSurvey__Translation__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Translations for this survey.</description>
    <inlineHelpText>Translations for this Survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>