force-app/main/default/objects/ArdiraSurvey__Translation__c/fields/ArdiraSurvey__Translated_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Translated_Record_Id__c</fullName>
    <description>Id of the translated record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id of the translated record.</inlineHelpText>
    <label>Translated Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>