force-app/main/default/objects/ArdiraSurvey__Translation__c/fields/ArdiraSurvey__Translations__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Translations__c</fullName>
    <description>Translation of the record contents. Stored as a name, value pair JSON where name is the API name of the field and value is the translated text for that field.</description>
    <inlineHelpText>Translation of the record contents. Stored as a name, value pair JSON where name is the API name of the field and value is the translated text for that field.</inlineHelpText>
    <label>Translations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>